--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "simplesoftwareio/simple-qrcode": "~2"
+        "simplesoftwareio/simple-qrcode": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
