--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "simplesoftwareio/simple-qrcode": "^2.0"
+
     },
     "require-dev": {
         "filp/whoops": "~2.0",
