--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
