--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.5",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "simplesoftwareio/simple-qrcode": "^2.0",
+        "fideloper/proxy": "^4.0",
         "google/recaptcha": "~1.1",
-        "rap2hpoutre/laravel-log-viewer": "^1.3"
-
+        "laravel/framework": "5.8.*",
+        "laravel/telescope": "^2.1",
+        "laravel/tinker": "~1.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.3",
+        "simplesoftwareio/simple-qrcode": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
