--- a/.env.example
+++ b/.env.example
@@ -34,8 +34,5 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-INVISIBLE_RECAPTCHA_SITEKEY=
-INVISIBLE_RECAPTCHA_SECRETKEY=
-INVISIBLE_RECAPTCHA_BADGEHIDE=false
-INVISIBLE_RECAPTCHA_DEBUG=false
-
+CAPTCHA_SITE_KEY=
+CAPTCHA_SECRET_KEY=
